--- a/order/Jenkinsfile
+++ b/order/Jenkinsfile
@@ -42,6 +42,7 @@ pipeline {
                     }
                 }
             }
+
             steps {
                 withCredentials([
                     string(credentialsId: 'DB_HOST', variable: 'DB_HOST'),
@@ -66,6 +67,15 @@ pipeline {
         }
 
         stage('Scan Image') {
+            when { 
+                allOf {
+                    changeset "${SERVICE}/**"
+                    expression { 
+                        sh(returnStatus: true, script: 'git diff --quiet ${SERVICE}/') == 0
+                    }
+                }
+            }
+
             steps {
                 script {
                     // Run Trivy to scan the Docker image
@@ -93,6 +103,7 @@ pipeline {
                     }
                 }
             }
+
             steps{
                 script{
                     docker.withRegistry("${REGISTRY_DOMAIN}", "ecr:${REGION}:${CRE_ID}") {
@@ -103,6 +114,15 @@ pipeline {
         }
 
         stage('Remove Resource') {
+            when { 
+                allOf {
+                    changeset "${SERVICE}/**"
+                    expression { 
+                        sh(returnStatus: true, script: 'git diff --quiet ${SERVICE}/') == 0
+                    }
+                }
+            }
+            
             steps{
                 sh "docker image rm ${DOCKER_IMAGE}:${DOCKER_TAG}"
             }
