--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     environment {
-        ACCOUNT_ID = "730335476156"
+        ACCOUNT_ID = "851725180020"
         REGION = "us-east-1"
         SERVICE = "api-gateway"
         REGISTRY_DOMAIN = "https://${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com"
@@ -13,25 +13,25 @@ pipeline {
     }
 
     stages { 
-        stage('SonarQube Analysis Source Code') {
-            when { 
-                allOf {
-                    changeset "${SERVICE}/**"
-                    expression { 
-                        sh(returnStatus: true, script: 'git diff --quiet ${SERVICE}/') == 0
-                    }
-                }
-            }
+        // stage('SonarQube Analysis Source Code') {
+        //     when { 
+        //         allOf {
+        //             changeset "${SERVICE}/**"
+        //             expression { 
+        //                 sh(returnStatus: true, script: 'git diff --quiet ${SERVICE}/') == 0
+        //             }
+        //         }
+        //     }
 
-            steps {
-                script {
-                    def scannerHome = tool 'SonarScanner'
-                    withSonarQubeEnv('jenkins') {
-                        sh "${scannerHome}/bin/sonar-scanner"
-                    }
-                }
-            }
-        }
+        //     steps {
+        //         script {
+        //             def scannerHome = tool 'SonarScanner'
+        //             withSonarQubeEnv('jenkins') {
+        //                 sh "${scannerHome}/bin/sonar-scanner"
+        //             }
+        //         }
+        //     }
+        // }
 
         stage('Build') {
             when { 
@@ -67,13 +67,6 @@ pipeline {
 
                     // Display Trivy scan results
                     println trivyOutput
-
-                    // Check if vulnerabilities were found
-                    if (trivyOutput.contains("Total: 0")) {
-                        echo "No vulnerabilities found in the Docker image."
-                    } else {
-                        echo "Vulnerabilities found in the Docker image."
-                    }
                 }
             }
         }
@@ -105,7 +98,7 @@ pipeline {
                     }
                 }
             }
-            
+
             steps{
                 sh "docker image rm ${DOCKER_IMAGE}:${DOCKER_TAG}"
             }
