--- a/info/Jenkinsfile
+++ b/info/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     environment {
-        ACCOUNT_ID = "730335476156"
+        ACCOUNT_ID = "851725180020"
         REGION = "us-east-1"
         SERVICE = "info"
         REGISTRY_DOMAIN = "https://${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com"
@@ -26,7 +26,7 @@ pipeline {
             steps {
                 script {
                     def scannerHome = tool 'SonarScanner'
-                    withSonarQubeEnv('jenkins') {
+                    withSonarQubeEnv('sonar-host') {
                         sh "${scannerHome}/bin/sonar-scanner"
                     }
                 }
@@ -83,13 +83,6 @@ pipeline {
 
                     // Display Trivy scan results
                     println trivyOutput
-
-                    // Check if vulnerabilities were found
-                    if (trivyOutput.contains("Total: 0")) {
-                        echo "No vulnerabilities found in the Docker image."
-                    } else {
-                        echo "Vulnerabilities found in the Docker image."
-                    }
                 }
             }
         }
