--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -2,14 +2,15 @@ pipeline {
     agent any
 
     environment {
-        ACCOUNT_ID = "851725180020"
+        ACCOUNT_ID = "339712719504"
+        REPO_NAME = "fcjws2"
         REGION = "us-east-1"
         SERVICE = "api-gateway"
+        CRE_ID = "aws-cre"
         REGISTRY_DOMAIN = "https://${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com"
         DOCKERFILE_PATH = "${SERVICE}/Dockerfile"
         DOCKER_TAG = "${SERVICE}-${GIT_COMMIT.substring(0, 7)}"
-        DOCKER_IMAGE = "${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/fcjws2"
-        CRE_ID = "aws-cre"
+        DOCKER_IMAGE = "${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${REPO_NAME}"
     }
 
     stages { 
